Fix maintenance message in dark mode + fix dark mode for Catan & Trok

--- a/src/css/games/catan.less
+++ b/src/css/games/catan.less
@@ -15,6 +15,10 @@ html[data-theme=dark] {
 		background: #005a81;
 	}
 
+	.cat_btn_wb {
+		background: var(--orange-30);
+	}
+
 	.cat_panel_prim_icons,
 	#player_boards .cat_panel_prim_icons .cat_panel_score {
 		filter: var(--drop-shadow-min) !important;
@@ -27,7 +31,7 @@ html[data-theme=dark] {
 	}
 
 	#cat_map_bg {
-		background: none;
+		background: radial-gradient(circle, #009bda 0, #0092cc 18%, #144b6c 23%, #000 65%);
 	}
 
 	.cat_img_knight,
